fix section img gap with max-height:100vh

--- a/index.css
+++ b/index.css
@@ -122,6 +122,8 @@ p {
 section {
 	position: relative;
 	overflow: hidden;
+    max-height: 100vh;
+    
 }
 
 img {
